syntax = "proto3";

package control.disconnect;

// A snazzy new shirt!
message DisconnectRequest {
}