syntax = "proto3";

package control.heartbeat;

message HeartbeatRequest {
}

message HeartbeatResponse {
}